@@ -76,6 +76,7 @@ will try to get the original data without any changes that may
 have been made to
 .Ar srcarchive
 after opening it.
+.\" XXX: document ZIP_FL_RECOMPRESS
 .Sh RETURN VALUES
 Upon successful completion, the created source is returned.
 Otherwise,
