@@ -1,7 +1,7 @@
 .\" $NiH: zip_unchange_all.mdoc,v 1.10 2005/06/09 21:14:54 wiz Exp $
 .\"
 .\" zip_unchange_archive.mdoc -- undo changes to all files in zip archive
-.\" Copyright (C) 2006 Dieter Baron and Thomas Klausner
+.\" Copyright (C) 2006-2008 Dieter Baron and Thomas Klausner
 .\"
 .\" This file is part of libzip, a library to manipulate ZIP archives.
 .\" The authors can be contacted at <libzip@nih.at>
@@ -31,7 +31,7 @@
 .\" OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
 .\" IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd April 23, 2006
+.Dd May 14, 2008
 .Dt ZIP_UNCHANGE_ARCHIVE 3
 .Os
 .Sh NAME
@@ -46,7 +46,7 @@ libzip (-lzip)
 .Sh DESCRIPTION
 Revert all global changes to the archive
 .Ar archive .
-For now, this only reverts archive comment changes.
+This reverts changes to the archive comment and global flags.
 .Sh RETURN VALUES
 Upon successful completion 0 is returned.
 Otherwise, \-1 is returned and the error code in
