@@ -1,8 +1,10 @@
-bin_PROGRAMS=zipcmp zipmerge
+bin_PROGRAMS=zipcmp zipmerge ziptorrent
 
 zipcmp_CPPFLAGS=-I${top_srcdir}/lib
 zipcmp_LDADD=${top_builddir}/lib/libzip.la
 zipmerge_CPPFLAGS=-I${top_srcdir}/lib
 zipmerge_LDADD=${top_builddir}/lib/libzip.la
+ziptorrent_CPPFLAGS=-I${top_srcdir}/lib
+ziptorrent_LDADD=${top_builddir}/lib/libzip.la
 
 EXTRA_DIST=	CMakeLists.txt
