@@ -2,12 +2,15 @@
 
 * on Windows, explictly set dllimport/dllexport
 * remove erroneous references to GPL
+* add support for torrentzip
+* new functions: zip_get_archive_flag, zip_set_archive_flag
+* zip_source_zip: add flag to force recompression
 
 0.8 [2007/06/06]
 
 * fix for zip archives larger than 2GiB
 * fix zip_error_strerror to include libzip error string
-* add support for streamed zip files
+* add support for reading streamed zip files
 * new functions: zip_add_dir, zip_error_clear, zip_file_error_clear
 * add basic support for building with CMake (incomplete)
 
